--- a/features/base/src/main/AndroidManifest.xml
+++ b/features/base/src/main/AndroidManifest.xml
@@ -32,15 +32,7 @@
         android:name="android.hardware.camera"
         android:required="false" />
 
-    <application
-        android:name="com.metinkale.prayer.App"
-        android:hardwareAccelerated="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/appName"
-        android:noHistory="true"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:replace="android:label">
+    <application>
 
 
         <uses-library
@@ -72,22 +64,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/filepaths" />
         </provider>
-
-
-        <receiver android:name="com.metinkale.prayer.receiver.TimeTickReceiver"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-                <action android:name="android.intent.action.DATE_CHANGED" />
-                <action android:name="android.intent.action.TIME_SET" />
-                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
-                <action android:name="android.intent.action.ACTION_USER_PRESENT" />
-            </intent-filter>
-        </receiver>
-
-
-        <service android:name="com.metinkale.prayer.service.ForegroundService" />
     </application>
 
 </manifest>
