--- a/features/times/src/main/AndroidManifest.xml
+++ b/features/times/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application>
@@ -33,29 +33,13 @@
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.Dialog" />
 
+        <service android:name=".OngoingNotificationsService" />
+
         <service android:name=".alarm.AlarmService" />
 
-        <receiver
-            android:name=".alarm.AlarmService$AlarmReceiver"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.TIME_SET" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-                <action android:name="android.intent.action.DATE_CHANGED" />
-            </intent-filter>
-        </receiver>
         <receiver android:name=".alarm.AlarmService$StopAlarmPlayerReceiver" />
         <receiver android:name=".alarm.SilenterReceiver" />
-        <receiver
-            android:name=".LocationReceiver"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-                <action android:name="android.intent.action.ACTION_USER_PRESENT" />
-            </intent-filter>
-        </receiver>
+        <service android:name=".LocationService" />
     </application>
 
 </manifest>
