--- a/android-config.json
+++ b/android-config.json
@@ -4,6 +4,6 @@
   "use_igmg_rest": false,
   "use_london_rest": false,
   "use_nvc_rest": false,
-  "use_semerkand_rest": false,
+  "use_semerkand_rest": true,
   "use_search_rest": true
 }
