--- a/features/about/build.gradle
+++ b/features/about/build.gradle
@@ -43,7 +43,7 @@ android {
         }
     }
 
-    flavorDimensions "store"
+    flavorDimensions = ["store"]
     productFlavors {
         fdroid {
             dimension "store"
