--- a/features/calendar/build.gradle
+++ b/features/calendar/build.gradle
@@ -39,7 +39,7 @@ android {
         }
     }
 
-    flavorDimensions "store"
+    flavorDimensions = ["store"]
     productFlavors {
         fdroid {
             dimension "store"
