--- a/features/dhikr/build.gradle
+++ b/features/dhikr/build.gradle
@@ -42,7 +42,7 @@ android {
         }
     }
 
-    flavorDimensions "store"
+    flavorDimensions = ["store"]
     productFlavors {
         fdroid {
             dimension "store"
