--- a/features/settings/build.gradle
+++ b/features/settings/build.gradle
@@ -40,7 +40,7 @@ android {
         }
     }
 
-    flavorDimensions "store"
+    flavorDimensions = ["store"]
     productFlavors {
         fdroid {
             dimension "store"
