--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@
 #Sat Dec 24 00:21:08 CET 2022
 android.useAndroidX=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
