--- a/features/compass/src/play/AndroidManifest.xml
+++ b/features/compass/src/play/AndroidManifest.xml
@@ -15,6 +15,9 @@
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application>
         <uses-library
             android:name="org.apache.http.legacy"
