--- a/features/intro/build.gradle
+++ b/features/intro/build.gradle
@@ -41,7 +41,7 @@ android {
         }
     }
 
-    flavorDimensions "store"
+    flavorDimensions = ["store"]
     productFlavors {
         fdroid {
             dimension "store"
