--- a/features/times/build.gradle
+++ b/features/times/build.gradle
@@ -46,7 +46,7 @@ android {
         }
     }
 
-    flavorDimensions "store"
+    flavorDimensions = ["store"]
     productFlavors {
         fdroid {
             dimension "store"
@@ -73,7 +73,6 @@ dependencies {
     implementation project(':features:base')
     implementation 'androidx.media:media:1.6.0'
     api 'dev.metinkale.prayertimes:core:1.0-SNAPSHOT'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.7.20'
 
     // compose
