--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ plugins {
 
 android {
 
+    lint {
+        baseline = file("lint-baseline.xml")
+    }
+
     namespace "com.metinkale.prayer"
 
     sourceSets {
