--- a/features/about/build.gradle
+++ b/features/about/build.gradle
@@ -22,6 +22,10 @@ plugins {
 
 
 android {
+    lint {
+        baseline = file("lint-baseline.xml")
+    }
+
     sourceSets {
         main {
             res.srcDirs += 'src/main/translations'
