--- a/features/settings/build.gradle
+++ b/features/settings/build.gradle
@@ -18,6 +18,10 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 android {
+    lint {
+        baseline = file("lint-baseline.xml")
+    }
+
     sourceSets {
         main {
             res.srcDirs += 'src/main/translations'
