--- a/features/intro/build.gradle
+++ b/features/intro/build.gradle
@@ -20,6 +20,10 @@ plugins {
 }
 
 android {
+    lint {
+        baseline = file("lint-baseline.xml")
+    }
+
     sourceSets {
         main {
             res.srcDirs += 'src/main/translations'
